--- a/creation_compte.css
+++ b/creation_compte.css
@@ -1,13 +1,12 @@
 body{
-  background-color: white;
+  background-image:url(fond.jpg);
 }
 
 form{
   text-align: center;
-  border: solid;
-  border-color: #051E49;
+  border-color: black;
   border-width: 3px;
-  background-color:white;
+  background-color:transparent;
 }
 
 .valider {
@@ -64,7 +63,7 @@ form{
 #compte{
 	height:80px;
 	width:90%;
-	background-color:white;
+	background-color:transparent;
 	top:auto;
 	left:5%;
 	position:relative;
@@ -73,7 +72,7 @@ form{
 
 #crea_compte{
 	width:90%;
-	background-color:white;
+	background-color:transparent;
 	top:auto;
 	left:5%;
 	right:auto;
