--- a/style_game.css
+++ b/style_game.css
@@ -1,73 +1,91 @@
+body{
+  background-color: white;
+}
+
 #titre{
 	height:120px;
 	width:90%;
-	background-color:#FF0004;
+	background-color:#2E518D;
 	top:0px;
 	left:5%;
 	position:relative;
 	display:inline-block;
-}
+	border: solid;
+	border-color: #051E49;
+	border-width: 3px;
+	}
 
 #compte{
 	height:80px;
 	width:90%;
-	background-color:#FFF004;
+	background-color:white;
 	top:auto;
 	left:5%;
 	height:50px;
 	position:relative;
+	text-align:right;
+	color: #051E49;
 	}
-	
 	
 #decouverte{
 	width:17%;
-	background-color:#00FF04;
+	background-color:#A0A0FF;
 	top:auto;
 	left:76px;
 	height:800px;
 	position:absolute;
+	border: solid;
+	border-color: #051E49;
 	}
 	
-		
 #defilement{
 	width:72.85%;
-	background: url('images/xbox.jpg') no-repeat;
+	background: url('images/promo1.jpg') no-repeat;
 	background-size: cover;
 	top:auto;
-	left:296px;
+	left:303px;
 	height:200px;
 	position:relative;
 	}
 	
 #articles{
 	width:72.85%;
-	background-color:#0F0F0F;
+	background-color:#FFFFFF;
 	top:auto;
-	left:296px;
+	left:303px;
 	height:600px;
 	position:relative;
 	}
 	
-
 #pied{
-	background-color:#888888;
 	bottom:0;
 	left:76px;
 	right:74px;
 	height:50px;
 	position:fixed;
 	text-align:center;
+	border: solid;
+	border-color: #051E49;
+	border-width: 3px;
+	background-color:#2E518D;
+	color: #051E49;
 	}
 	
 h1{
-text-align:center;
-font-size: 50px;
-}
-	
-		
+	text-align:center;
+	font-size: 50px;
+	color: #051E49;
+	}
+
+
 h4{
-text-align:center;
-font-size: 20px;
-}
+	text-align:center;
+	font-size: 20px;
+	color: #051E49;
+	}
+
+td{
+	text-align:center;
+	}
 	
 	
